--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <!-- All displayable webpage content will be coded here-->
-     Hello World and Good Day!
+     Hello World and Good Day!!
 </body>
 
 </html>
