--- a/Stock Screener.html
+++ b/Stock Screener.html
@@ -1,3 +1,2 @@
 <h1>Stock Screener</h1>
-
-<h5>Welcome to the app! Start searching below to find any stocks</h5>
+<p>Welcome to the app! Start searching below to find any stocks</p>
