--- a/Stock Screener.html
+++ b/Stock Screener.html
@@ -1,2 +1,4 @@
+<img src="./Assets/logos/Heicoders-Academy-Logo.jpeg" alt="Heicoders-Academy-Logo" width="240"/>
 <h1>Stock Screener</h1>
 <p>Welcome to the app! Start searching below to find any stocks</p>
+
