--- a/Stock Screener.html
+++ b/Stock Screener.html
@@ -2,3 +2,9 @@
 <h1>Stock Screener</h1>
 <p>Welcome to the app! Start searching below to find any stocks</p>
 
+<a href="./about.html"> About Page </a>
+
+<a href="./login.html"> Login </a>
+
+<a href="./stock.html"> Stock </a>
+
