lesson4_exercise1to6

--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script type = "text/javascript" src = "./script_exercise2.js"></script>
+    <script type = "text/javascript" src = "./script_exercise4 copy.js"></script>
 </head>
 <body>
     Hello World
